--- a/Chess.WPFApplication/Chess.WPFApplication.csproj
+++ b/Chess.WPFApplication/Chess.WPFApplication.csproj
@@ -6,4 +6,8 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Chess.Core\Chess.Core.csproj" />
+    </ItemGroup>
+
 </Project>
